--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   overflow: hidden;
-  background-color: black;
+  background: url('assets/Espace.jpeg') no-repeat center center fixed;
+  background-size: cover;
 }
 
 canvas {
